--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "prettier:check": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\"",
     "prettier:fix": "prettier --write .",
     "lint-prettier": "npm lint:check && npm prettier:check",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepare": "husky install"
   },
   "author": "Siam Asrar",
   "license": "ISC",
+  "lint-staged": {
+    "src/**/*.ts": "npm lint-prettier"
+  },
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
@@ -21,6 +25,7 @@
     "@typescript-eslint/parser": "^5.59.8",
     "eslint": "^8.41.0",
     "eslint-config-prettier": "^8.8.0",
+    "husky": "^8.0.3",
     "prettier": "^2.8.8",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.4"
@@ -32,6 +37,7 @@
     "dotenv": "^16.1.0",
     "eslint": "^8.41.0",
     "express": "^4.18.2",
+    "lint-staged": "^13.2.2",
     "mongoose": "^7.2.2"
   }
 }
