--- a/package.json
+++ b/package.json
@@ -9,35 +9,31 @@
     "lint:fix": "eslint . --fix",
     "prettier:check": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\"",
     "prettier:fix": "prettier --write .",
-    "lint-prettier": "npm lint:check && npm prettier:check",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "prepare": "husky install"
+    "lint-prettier": "yarn lint:check && yarn prettier:check",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Siam Asrar",
   "license": "ISC",
   "lint-staged": {
-    "src/**/*.ts": "npm lint-prettier"
+    "src/**/*.ts": "npx lint-prettier"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
-    "@typescript-eslint/eslint-plugin": "^5.59.8",
-    "@typescript-eslint/parser": "^5.59.8",
-    "eslint": "^8.41.0",
     "eslint-config-prettier": "^8.8.0",
     "husky": "^8.0.3",
+    "lint-staged": "^13.2.2",
     "prettier": "^2.8.8",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.4"
   },
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.59.8",
-    "@typescript-eslint/parser": "^5.59.8",
+    "@typescript-eslint/eslint-plugin": "^5.59.7",
+    "@typescript-eslint/parser": "^5.59.7",
     "cors": "^2.8.5",
-    "dotenv": "^16.1.0",
+    "dotenv": "^16.0.3",
     "eslint": "^8.41.0",
     "express": "^4.18.2",
-    "lint-staged": "^13.2.2",
-    "mongoose": "^7.2.2"
+    "mongoose": "^7.2.1"
   }
 }
