--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "author": "Siam Asrar",
   "license": "ISC",
   "lint-staged": {
-    "src/**/*.ts": "npx lint-prettier"
+    "src/**/*.ts": "npm run lint-prettier"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
