--- a/.eslintrc
+++ b/.eslintrc
@@ -4,12 +4,24 @@
     "ecmaVersion": 12,
     "sourceType": "module"
   },
-  "plugins": ["@typescript-eslint"],
-  // HERE
-  "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended"],
+  "plugins": [
+    "@typescript-eslint"
+  ],
+  "extends": [
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended",
+    "prettier"
+  ],
   "rules": {
-    "@typescript-eslint/no-unused-vars": "error",
-    "@typescript-eslint/consistent-type-definitions": ["error", "type"]
+    "no-console": "error",
+    "no-undefined": "error",
+    "no-unused-expressions": "error",
+    "no-unreachable": "error",
+    "no-unused-vars": "error",
+    "consistent-type-definitions": [
+      "error",
+      "type"
+    ]
   },
   "env": {
     "browser": true,
