--- a/.eslintrc
+++ b/.eslintrc
@@ -14,17 +14,17 @@
   ],
   "rules": {
     "no-console": "error",
-    "no-undefined": "error",
+    "no-undef": "error",
     "no-unused-expressions": "error",
     "no-unreachable": "error",
-    "no-unused-vars": "error",
-    "consistent-type-definitions": [
-      "error",
-      "type"
-    ]
+    "no-unused-vars": "error"
   },
   "env": {
     "browser": true,
-    "es2021": true
+    "es2021": true,
+    "node": true
+  },
+  "globals": {
+    "process": "readonly"
   }
 }
