--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Auth Service w/ Express, Mongoose & Typescript",
   "main": "src/server.ts",
   "scripts": {
-    "start": "NODE_ENV=development && npm run build",
-    "build": "ts-node-dev --respawn --transpile-only src/server.ts && tsc --watch",
+    "start": "ts-node-dev --respawn --transpile-only src/server.ts",
     "lint:check": "eslint --ignore-path .eslintignore --ext .js,.ts .",
     "lint:fix": "eslint . --fix",
     "prettier:check": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\"",
@@ -21,6 +20,9 @@
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^4.33.0",
+    "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.8.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.2",
@@ -29,14 +31,17 @@
     "typescript": "^5.0.4"
   },
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.59.7",
-    "@typescript-eslint/parser": "^5.59.7",
+    "@types/bcrypt": "*",
+    "@types/cookie-parser": "^1.4.3",
+    "@types/jsonwebtoken": "^9.0.2",
+    "bcrypt": "^5.1.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "eslint": "^8.41.0",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "http-status": "^1.6.2",
-    "mongoose": "^7.2.1",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.3.1",
     "winston": "^3.9.0",
     "winston-daily-rotate-file": "^4.7.1",
     "zod": "^3.21.4"
